# d-skill-forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  EXTRACTION_UPGRADE_PLAN.md  LICENSE  NIGHT_RUN_REPORT.md  README.md  SECURITY.md  UPGRADE_PLAN_TUI.md  UPGRADE_REPORT.md  install.ps1  install.sh  mkdocs.yml  pyproject.toml  tasks.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kiro/agents/: docs-writer.md  python-implementer.md  scaffolder.md  skill-learner.md  test-author.md
.kiro/steering/: git-workflow.md  models-contract.md  product.md  python-style.md  structure.md  tech.md  testing-conventions.md
d-skill-forge-kiro-bundle/d-skill-forge-kiro/: README.md
docs/: architecture.md  auth.md  concepts.md  extractors.md  index.md  providers.md  quickstart.md  tui.md
docs/examples/: python-debug.md  regex-puzzles.md  sql-debug.md
docs/reference/: api.md  cli.md
examples/python-debug/: README.md  tasks.yaml
examples/regex-puzzles/: README.md  tasks.yaml
examples/sql-debug/: README.md  tasks.yaml
src/skillforge/: __init__.py  __main__.py  auth.py  config.py  errors.py  lint.py  logging.py  paths.py  recorder.py  runner.py  skill_io.py  tasks.py  version.py
tests/: __init__.py  conftest.py
tests/e2e/: test_python_debug_example.py
tests/fixtures/: skill_sample.md  skillforge_minimal.toml  tasks_minimal.yaml
tests/integration/: test_diff_cli.py  test_doctor_cli.py  test_eval_cli.py  test_extract_cli.py  test_init_cli.py  test_lint_cli.py  test_main_cli.py  test_run_cli.py
tests/smoke/: __init__.py  (+2 more)
(+100 files in other folders)
