[project]
name = "d-skill-forge"
version = "0.2.3"
description = "Distill procedural skills from frontier model traces into reusable SKILL.md artifacts."
authors = [{ name = "d-init-d" }]
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "click>=8.1",
  "pydantic>=2.7",
  "httpx>=0.27",
  "anthropic>=0.39",
  "openai>=1.50",
  "rich>=13.7",
  "pyyaml>=6.0",
  "ulid-py>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "hypothesis>=6.100",
  "respx>=0.21",
  "ruff>=0.6",
  "pyright>=1.1.380",
  "pre-commit>=3.8",
  "mkdocs-material>=9.5",
  "mkdocs-click>=0.8",
]
bedrock = ["boto3>=1.34"]
gemini = ["google-generativeai>=0.7"]

[project.scripts]
skillforge = "skillforge.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "TCH", "PL", "D"]
ignore = ["D203", "D213", "PLR0913", "PLR0915"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
strict = ["src"]
exclude = ["src/skillforge/providers/bedrock.py"]
pythonVersion = "3.11"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "smoke: hits real provider APIs; skipped unless RUN_SMOKE=1.",
]

[tool.coverage.run]
omit = []
